# oop-exercicse

./: pyproject.toml
exercises/: booking.py  config_loader.py  fluent.py  greet.py  links.py  password.py  pattern.py  pattern5.py  polimorph.py  stringify.py  user.py
exercises/connection/: conneceted.py  disconnected.py  tcp_connection.py
exercises/context/: con.py  decortator.py
exercises/descript/: maxlength.py  range.py  stringvalid.py
exercises/exceptions/: bank.py  button.py  customer.py  num.py  wallet.py
exercises/heritage/: abstract.py  db.py  devices.py  figures.py  initialization.py  mro.py  transport.py  vehicle.py
exercises/kv/: file_kv.py  in_memory_kv.py  solution.py
exercises/kv/tests/: test_file_kv.py  test_in_memory_kv.py  test_solution.py
exercises/magik/: building.py  cart.py  checker.py  chess.py  count.py  deck.py  fib.py  fruit.py  groc.py  hero.py  iter.py  libraryiter.py  powertwo.py  rectangle.py  song.py  stack.py  vector.py
exercises/meta/: appconf.py  logger.py  singleton.py
exercises/mixins/: classes.py  dictmixin.py  mixins.py  permit.py  pizza.py  serialize.py  test_mixins.py
exercises/stepik/: app_config.json  app_config.py  circle.py  counter.py  date.py  emp.py  enamclass.py  label.py  library.py  money.py  reg.py  robot.py  stack.py
exercises/tic_tac_toe/: easy.py  normal.py  tic_tac_toe.py
